# ee205_animal_farm-marknelsonengineer-student

./: .clang-tidy  .gitignore  CMakeLists.txt  DOXYGEN.md  README.md  RELEASE.md  STATISTICS.md
.doxygen/: CMakeLists.txt  CMake_Doxygen.txt  stats.py
.doxygen/css/: extraStyleSheet.css
src/: config.h  main_hello.cpp
src/Animal/: Animal.cpp  Animal.h
src/Animal/Mammal/: Mammal.cpp  Mammal.h
src/Animal/Mammal/Cat/: Cat.cpp  Cat.h
src/Utility/: Color.cpp  Color.h  Gender.cpp  Gender.h  Name.cpp  Name.h  Random.cpp  Random.h  Trim.cpp  Trim.h  Weight.cpp  Weight.h
tests/: CMakeLists.txt  INSTALLING_BOOST_TESTS.md  test_Animal.cpp  test_Cat.cpp  test_Gender.cpp  test_Name.cpp  test_Random.cpp  test_Trim.cpp  test_Weight.cpp
